Window Cleaning & Removed approved NDIS provider

--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>
-                            Carpet Cleaning</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">We can clean your carpet and have it smelling fresh again with our professional carpet cleaning equipment and our well trained staff, we can rid your carpet of any gunk or stain it might have accumulated over the years.
+                            Carpet & Window Cleaning</strong></h4>
+                        <p class="mbr-text mbr-fonts-style display-7">We can clean your carpet and have it smelling fresh again with our professional carpet cleaning equipment and our well trained staff, we can rid your carpet of any gunk or stain it might have accumulated over the years. We additionally offer services to clean your windows to make them crystal clear again.
 <br>
 <br></p>
                     </div>
@@ -279,7 +279,6 @@
             <hr class="line" style="width: 25%;">
             <div class="section-text align-center mbr-fonts-style display-5">Yellow Mountain is the culmination of determined healthcare professionals who are
 <div>passionate about providing the best possible assistance to those who need it.
-</div><div>We are an Approved Provider of the National Disability Insurance Agency.</div></div>
             <hr class="line" style="width: 25%;">
         </div>
         </div>
