added closing divs

--- a/index.html
+++ b/index.html
@@ -278,10 +278,12 @@
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 25%;">
             <div class="section-text align-center mbr-fonts-style display-5">Yellow Mountain is the culmination of determined healthcare professionals who are
-<div>passionate about providing the best possible assistance to those who need it.
+            <div>passionate about providing the best possible assistance to those who need it.
             <hr class="line" style="width: 25%;">
         </div>
         </div>
+      </div>
+  </div>
 </section>
 
 <section class="features1 cid-s7kE5wSW1Y" id="features1-m">
