--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                         </h5>
                         <p class="mbr-text align-left mbr-fonts-style display-7">
                             Phone: +61 (2) 9907 8327<br>
-                            Email: info@myprovidence.net.au</p>
+                            Email: info@yellowmountain.net.au</p>
                     </div>
                 </div>
                 <div data-form-type="formoid">
