Removed Extra panel

--- a/ageing-support-services.html
+++ b/ageing-support-services.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="header1 cid-s7lqVg06hv mbr-parallax-background" id="header1-1g">
+<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section class="header1 cid-s7lqVg06hv mbr-parallax-background" id="header1-1g">
 
     
 
@@ -136,7 +136,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vAfVy6DqZ2h1OBPaVuKZlel6qa2sS1hs/6xYM2GnCn2ABl1/AbyEafC7yFBViZW6B2/Clp49+ihE7aEhbuLj52UosI+tCWIWdLymB3qgWCN/aF5ch83r4oVeMrnrqr/m">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Tk4eLLDJ0dv7G/+BfFwUQEXen1+2gME+Efn+eY+2hppZFjeIpHrYN5d+gMQ0qyRVxjLwMcR3q5mbHgwEWOGlNSYh6q4YZ9MsXnozq0qVL46faZ8ByrlwBuMPqnJ8WyBY">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">We'll try to reach out to you soon!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -198,7 +198,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Drop your email below and <br>we'll contact you!</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dD6AzF3KyAiKkR8CXB6uBzUMnPq+fJWR55d5Mie5PiPVOtH6pxuw84Oc/15XJMevGWtyWfQ/E2kEeBQYP40S0ox9cASvkNgpI2Z7b2CQ77h7r4nr8bTZOuxvlYbVUFZi">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Tqm0M80uzEwgYKppi9fya12mNXx+gzoG9mgZ1RGsv/8wzs2i7a+C2KhroinLvGHB7CV9AUKW7OAuwevn5in96ccsA+xj5UtxyE5MZTgim6VrPF43k34oytdQlL+ew/vq">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">We'll reach out to you soon!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
