--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="cid-s7jW5n0Xij mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="cid-s7jW5n0Xij mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -169,7 +169,7 @@
                 
             </div>
             <div class="media-container-row image-row">
-                <div class="mbr-figure" style="width: 60%;">
+                <div class="mbr-figure" style="width: 100%;">
                     <img src="assets/images/supported-independent-living-home-1067x600.jpg" alt="supported-independent-living" title="supported-independent-living">
                 </div>
             </div>
@@ -556,7 +556,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="daEzGLdwYi82XqlgAS8xxB4Y9xBp0XNXkTmFYZgXaxiUKKQ6t6AK56fihD7+b0U9msmN/souk5y8NfIOaNYUgCjtEWpBmbgFdSvofTQNDiX9r0NHFszDvtWvzZrRVaKb">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="M0B6dn1w5PoL1kdDVB2V749lCFdRRx1MX2ORqsGFI7Q5QmjvTzA0K3elKhUONR5D+/tgtTxPTDGhuoprUQJGOMN1HKwfmfFdPHto3EI404jcEXaCkXge0kBlbaAXTyjw">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">We'll try to reach out to you soon!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -617,7 +617,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Drop your email below and <br>we'll contact you!</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nwslqEumnr92rUIQ9AigwKOZ0TDbqQBOw96quQYyqbi60dq9NFtn3NlDXvz5BKY0z3e+JC/tJ8l0RHfbIP2SYPtM9Y6LMhynYWLjScMo9JgIaEi3O9CaECIpfklj2nGf">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1Y6axNTrpuffQDGqCQKOltKUKJzv5MAsN2VWJvNGL2jSPMigkhabMD5XDXqm/1NLEgILWbdd9OUBdt+O40fuHB8vSQ+wAH7SKL0WvDwfzw8uRtwPTSYfbe+2JvjUt2gS">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">We'll reach out to you soon!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
